Update for portable version

--- a/layouts/partials/custom-header.html
+++ b/layouts/partials/custom-header.html
@@ -31,3 +31,8 @@
     'allow_google_signals': false
   });
 </script>
+
+
+<!-- Lightbox see https://hugocodex.org/add-ons/lightbox/ -->
+<script defer type="text/javascript" src="/js/lightbox.js"></script>
+<link rel="stylesheet" href="/css/lightbox.css">
